# cs4puzzlesolver

./: CMakeLists.txt  README.md  clock.cpp  clockconfig.cpp  clockconfig.h  config.h  readme  solver.cpp  solver.h  water.cpp  waterconfig.cpp
info/: readme  team-evaluation.txt
src/: CMakeLists.txt  clock.cpp  config.h  lightconfig.cpp  lightconfig.h  lights.cpp  magic.cpp  magicconfig.cpp  magicconfig.h  solver.h  water.cpp  waterconfig.cpp  waterconfig.h
